# careerpilot-ai

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_SETUP.md  LICENSE  Makefile  PORTFOLIO_DESCRIPTION.md  README.md  SECURITY.md  __init__.py  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_app.py  test_db.py  test_matcher.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: sample_jobs.csv
docs/: ARCHITECTURE.md
src/: analytics.py  db.py  matcher.py  utils.py
tests/: test_analytics.py
