[project]
name = "careerpilot-ai"
version = "1.0.0"
description = "A local-first job application tracker and explainable CV match analyzer."
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Fahim Sikder"}]
keywords = ["streamlit", "job-tracker", "nlp", "sqlite", "portfolio"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["data"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
